Fixed css so words don't overflow image.

--- a/Resources/css/styles.css
+++ b/Resources/css/styles.css
@@ -62,26 +62,32 @@ main{
 
 .banner-top{
   background-color:lightgrey;
-  padding: 24px;
   display: flex;
-  width: 100%;
   font-family: Arial, Helvetica, sans-serif;
+  font-weight:bolder;
+  padding: 0 1.5rem;
+ 
 }
 
 .left-image{
-  padding: 32px 24px 32px 24px;
-  width: auto;
+  max-width: 60%;
+  padding: 2rem 1.5rem 2rem 0;
+}
 
+.left-image img{
+  width:100%;
+  margin: auto;
 }
 
 .right-text{
-  padding: 24px;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
   display: flex;
   color: rgb(70,68,68);
-  font-weight: bold;
+  padding: 2rem 0;
+  width: 40%;
+
 }
 
 .right-text button {
